gccida/g1/print_rtl_graph_with_bb
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:710:25: error: expected expression
print_rtl_graph_with_bb::bb_state *v15; // r15 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:719:25: error: expected expression
print_rtl_graph_with_bb::bb_state *v24; // rcx 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:719:1: error: redefinition of label 'print_rtl_graph_with_bb'
print_rtl_graph_with_bb::bb_state *v24; // rcx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:710:1: note: previous definition is here
print_rtl_graph_with_bb::bb_state *v15; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:737:25: error: expected expression
print_rtl_graph_with_bb::bb_state *in_bb_p; // [rsp+0h] [rbp-50h] BYREF 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:737:1: error: redefinition of label 'print_rtl_graph_with_bb'
print_rtl_graph_with_bb::bb_state *in_bb_p; // [rsp+0h] [rbp-50h] BYREF 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:710:1: note: previous definition is here
print_rtl_graph_with_bb::bb_state *v15; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:742:1: error: use of undeclared identifier 'in_bb_p'
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)rtx_first; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:742:36: error: expected ')'
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)rtx_first; 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:742:11: note: to match this '('
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)rtx_first; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:755:10: error: use of undeclared identifier 'in_bb_p'
memcpy( &in_bb_p, fp, v3); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:756:19: error: use of undeclared identifier 'in_bb_p'
memcpy( ( char *)&in_bb_p + v3, end, ( size_t)start); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:757:19: error: use of undeclared identifier 'in_bb_p'
memcpy( ( char *)&in_bb_p + ( _QWORD)v8, v5, v7); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:758:30: error: use of undeclared identifier 'in_bb_p'
v10 = fopen( ( const char *)&in_bb_p, "a"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:762:6: error: use of undeclared identifier 'in_bb_p'
if ( in_bb_p ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:770:32: error: expected ')'
v15 = ( print_rtl_graph_with_bb::bb_state *)xmalloc( v12); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:770:7: note: to match this '('
v15 = ( print_rtl_graph_with_bb::bb_state *)xmalloc( v12); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:770:1: error: use of undeclared identifier 'v15'
v15 = ( print_rtl_graph_with_bb::bb_state *)xmalloc( v12); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:773:30: error: use of undeclared identifier 'v15'
for ( i = 0LL; i != max_uid; v15[i++] = NOT_IN_BB_0 ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:773:41: error: use of undeclared identifier 'NOT_IN_BB_0'
for ( i = 0LL; i != max_uid; v15[i++] = NOT_IN_BB_0 ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:795:1: error: use of undeclared identifier 'v24'
v24 = &v15[*( int *)( v22 + 8)]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:795:8: error: use of undeclared identifier 'v15'
v24 = &v15[*( int *)( v22 + 8)]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/graph.c:796:17: error: use of undeclared identifier 'v24'
*v24 = 1 - ( ( *v24 == NOT_IN_BB_0) - 1); 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_rtl_graph_with_bb/src/obj/graph.o] Error 1
